--- a/hanna/index.html
+++ b/hanna/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8" />
   <title>ExpanSaler</title>
 
-  <base href="/" />
-
+  <base href="/hanna/">
   <meta name="color-scheme" content="light dark" />
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
@@ -21,6 +20,6 @@
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.421a48805ee5f9c57f88.js" type="module"></script><script src="runtime-es5.421a48805ee5f9c57f88.js" nomodule defer></script><script src="polyfills-es5.7f04130fb748fb469cc3.js" nomodule defer></script><script src="polyfills-es2015.91389ecfa80f1063947d.js" type="module"></script><script src="main-es2015.f78ca80545e05fb6dd6f.js" type="module"></script><script src="main-es5.f78ca80545e05fb6dd6f.js" nomodule defer></script></body>
+<script src="runtime-es2015.dd0e419f233e751a5b0d.js" type="module"></script><script src="runtime-es5.dd0e419f233e751a5b0d.js" nomodule defer></script><script src="polyfills-es5.7f04130fb748fb469cc3.js" nomodule defer></script><script src="polyfills-es2015.91389ecfa80f1063947d.js" type="module"></script><script src="main-es2015.f78ca80545e05fb6dd6f.js" type="module"></script><script src="main-es5.f78ca80545e05fb6dd6f.js" nomodule defer></script></body>
 
 </html>
