--- a/dental/index.html
+++ b/dental/index.html
@@ -203,16 +203,19 @@ flexibility(document.documentElement);
 </div>
 <div id="wpforms-5-field_5-container" class="wpforms-field wpforms-field-select wpforms-field-select-style-classic" data-field-id="5">
 <label class="wpforms-field-label wpforms-label-hide" for="wpforms-5-field_5">Dropdown <span class="wpforms-required-label">*</span></label><select id="wpforms-5-field_5" class="wpforms-field-large wpforms-field-required" name="wpforms[fields][5]" required="required"><option value="" class="placeholder" disabled selected>Service</option>
-<option value="First Choice">First Choice</option>
-<option value="Second Choice">Second Choice</option>
-<option value="Third Choice">Third Choice</option></select>
+<option value="Dental Implants">Dental Implants</option>
+<option value="Cosmetic Dentistry">Cosmetic Dentistry</option>
+<option value="Root Canals">Root Canals</option>
+<option value="Teeth Whitening">Teeth Whitening</option>
+<option value="Dental X-Rays">Dental X-Rays</option>
+<option value="Braces &amp; Implants">Braces &amp; Implants</option></select>
 </div>
 <div id="wpforms-5-field_2-container" class="wpforms-field wpforms-field-textarea" data-field-id="2">
 <label class="wpforms-field-label wpforms-label-hide" for="wpforms-5-field_2">Message</label><textarea id="wpforms-5-field_2" class="wpforms-field-medium" name="wpforms[fields][2]" placeholder="Message ( Optional )"></textarea>
 </div>
 </div>
 <div class="wpforms-field wpforms-field-hp">
-<label for="wpforms-5-field-hp" class="wpforms-field-label">Name</label><input type="text" name="wpforms[hp]" id="wpforms-5-field-hp" class="wpforms-field-medium">
+<label for="wpforms-5-field-hp" class="wpforms-field-label">Comment</label><input type="text" name="wpforms[hp]" id="wpforms-5-field-hp" class="wpforms-field-medium">
 </div>
 <div class="wpforms-submit-container">
 <input type="hidden" name="wpforms[id]" value="5"><input type="hidden" name="wpforms[author]" value="1"><input type="hidden" name="wpforms[post_id]" value="384"><button type="submit" name="wpforms[submit]" class="wpforms-submit " id="wpforms-submit-5" value="wpforms-submit" aria-live="assertive" data-alt-text="Sending..." data-submit-text="Send on WhatsApp">Send on WhatsApp</button>
